# sitemap2urllist

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  .yarnrc  Brewfile  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  glue.js  jest.config.js  lerna.json  package-lock.json  package.json  shippable.yml  tsconfig.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  build-and-test.yml  build.yml  dependabot-auto-merge.yml  deploy.yml  lint.yml  mega-linter.yml  super-linter.yml
.mergify/: config.yml
cli/: README.md  main.js  package-lock.json  package.json  tsconfig.json
cli/src/: cli.ts  main.js  main.ts
cli/tests/: bad-files.bats  cli.bats  good-files.bats
deploy-test/: package-lock.json  package.json
lib/: README.md  package-lock.json  package.json  tsconfig.json
lib/src/: main.ts
lib/tests/: main.test.ts
node/: package-lock.json  package.json  tsconfig.json
node/src/: lib.ts  main.ts
sitemaps/: alternate-in.xml  alternate-out-with.txt  multiple-in.xml  multiple-out.txt  order-alphanum-in.xml  order-alphanum-out.txt  order-priority-in.xml  single-in.xml  sitemapindex-in.xml  without-preamble-in.xml  zero-in.xml
sitemaps/bad/: .editorconfig
sitemaps/good/: .editorconfig  alternate-in.xml  alternate-out.txt  multiple-in.xml  order-alphanum-in.xml  order-priority-out.txt  single-in.xml  without-preamble-in.xml  zero-in.xml
sitemaps/unsupported/: .editorconfig  sitemapindex-404.xml  sitemapindex.txt
src/: error.rs  lib.rs  main.rs  url_entry.rs
src/cli/: cli.ts  main.js  package-lock.json  package.json
src/cli/tests/: bad-files.bats  cli.bats  good-files.bats
src/internal/: convert.rs  error.rs  mod.rs  save.rs  url_entry.rs  utils.rs
src/lib/: lib.ts  package.json
src/lib/tests/: main.test.ts
tests/: main.test.ts
tests-cli/: package-lock.json  package.json
tests-cli/tests/: bad-files.bats  cli.bats  good-files.bats  remote-files.bats
web/: package.json
