[package]
publish = false
name = "sitemap2urllist"
version = "0.2.1"
authors = ["Matej Košiarčik <matej.kosiarcik@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/matejkosiarcik/sitemap2urllist"
description = "Simple sitemap.xml to urllist.txt converter"

[dependencies]
xmltree = "0.10.3"
url = "2.2.2"
async-std = "1.11.0"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = "2.3.2"
getrandom = "0.2.6"
# clap = { version = "3.0.0-beta.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"
getrandom = { version = "0.2.6", features = ["js"] }
reqwest = "0.11.10"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

[lib]
name = "sitemap2urllist"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sitemap2urllist"
path = "src/main.rs"
# required-features = ["bin-dependencies"]

# [features]
# bin-dependencies = ["clap"]
