[package]
publish = false
name = "sitemap2urllist"
version = "0.2.1"
authors = ["Matej Košiarčik <matej.kosiarcik@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/matejkosiarcik/sitemap2urllist"
description = "Simple sitemap.xml to urllist.txt converter"

[dependencies]
xmltree = "0.10.3"
url = "2.3.1"
async-std = "1.12.0"
clap = { version = "4.0.17", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = "2.3.2"
getrandom = "0.2.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.60"
getrandom = { version = "0.2.7", features = ["js"] }
reqwest = "0.11.12"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"

[lib]
name = "sitemap2urllist"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sitemap2urllist"
path = "src/main.rs"
